@@ -3,27 +3,12 @@
 <KDevPrjSession>
  <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="4" >
-  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/TODO" >
-   <View0 line="6" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="512" Left="2" MinMaxMode="0" />
+ <DocsAndViews NumberOfDocuments="1" >
+  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rbackend/rpackages/Makefile" >
+   <View0 line="2" Type="???" >
+    <AdditionalSettings Top="2" Width="954" Attach="1" Height="536" Left="2" MinMaxMode="0" />
    </View0>
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/main.cpp" >
-   <View0 line="27" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="512" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/debug.h" >
-   <View0 line="38" Type="???" >
-    <AdditionalSettings Top="2" Width="954" Attach="1" Height="512" Left="2" MinMaxMode="0" />
-   </View0>
-  </Doc2>
-  <Doc3 context="ctx_doxygen" NumberOfViews="1" URL="file:/usr/share/doc/kde/HTML/en/kdelibs-apidocs/kdecore/html/classKCmdLineArgs.html#a0" >
-   <View0 Type="???" >
-    <AdditionalSettings/>
-   </View0>
-  </Doc3>
  </DocsAndViews>
  <pluginList>
   <kdevbookmarks>
