@@ -22,8 +22,7 @@
 #include "../rbackend/rinterface.h"
 #include "../rkglobals.h"
 
-#define FIND_META_COMMAND 1
-#define UPDATE_DIM_COMMAND 2
+#define UPDATE_DIM_COMMAND 1
 
 #include "../debug.h"
 
@@ -57,7 +56,9 @@ QString RKVariable::getTable () {
 void RKVariable::updateFromR () {
 	RK_TRACE (OBJECTS);
 
-	RCommand *command = new RCommand ("!is.null (attr (" + getFullName () + ", \".rk.meta\"))", RCommand::App | RCommand::Sync | RCommand::GetIntVector, "", this, FIND_META_COMMAND);
+	getMetaData (RKGlobals::rObjectList()->getUpdateCommandChain ());
+
+	RCommand *command = new RCommand ("length (" + getFullName () + ")", RCommand::App | RCommand::Sync | RCommand::GetIntVector, "", this, UPDATE_DIM_COMMAND);
 	RKGlobals::rInterface ()->issueCommand (command, RKGlobals::rObjectList()->getUpdateCommandChain ());
 }
 
@@ -66,18 +67,7 @@ void RKVariable::rCommandDone (RCommand *command) {
 
 	RObject::rCommandDone (command);
 	
-	if (command->getFlags () == FIND_META_COMMAND) {
-		if ((command->intVectorLength () == 1) && command->getIntVector ()[0]) {
-			RObject::type |= HasMetaObject;
-			getMetaData (RKGlobals::rObjectList()->getUpdateCommandChain ());
-		} else {
-			RObject::type -= (RObject::type & HasMetaObject);
-		}
-		
-		RCommand *ncommand = new RCommand ("length (" + getFullName () + ")", RCommand::App | RCommand::Sync | RCommand::GetIntVector, "", this, UPDATE_DIM_COMMAND);
-		RKGlobals::rInterface ()->issueCommand (ncommand, RKGlobals::rObjectList()->getUpdateCommandChain ());
-
-	} else if (command->getFlags () == UPDATE_DIM_COMMAND) {
+	if (command->getFlags () == UPDATE_DIM_COMMAND) {
 		if (command->intVectorLength () == 1) {
 			length = command->getIntVector ()[0];
 		} else {
