@@ -4,3 +4,4 @@ METASOURCES = AUTO
 noinst_LIBRARIES =  librbackend.a
 librbackend_a_SOURCES = rembed.cpp rembedinternal.cpp rinterface.cpp rthread.cpp rcommand.cpp
 noinst_HEADERS = rembed.h rembedinternal.h rinterface.h rthread.h rcommand.h rcommandreceiver.h
+SUBDIRS =  rpackages
