@@ -19,6 +19,7 @@
 
 #include "../rkwatch.h"
 #include "rthread.h"
+#include "rembed.h"
 #include "../rkward.h"
 #include "../settings/rksettingsmoduler.h"
 
@@ -79,8 +80,20 @@ void RInterface::customEvent (QCustomEvent *e) {
 	} else if ((e->type () == RBUSY_EVENT)) {
 		RKGlobals::rkApp ()->setRStatus (true);	
 	} else if ((e->type () == RSTARTED_EVENT)) {
-		// anything to do here?
-	} else if ((e->type () == RERROR_SINKING_EVENT)) {
-		KMessageBox::error (0, i18n ("There was a problem opening the files needed for communication with R. Most likely this is due to an incorrect setting for the location of these files. Check whether you have correctly configured the location of the log-files (Settings->Configure Settings->Logfiles) and restart RKWard."), i18n ("Error starting R"));
+		r_thread->unlock ();
+	} else if ((e->type () > RSTARTUP_ERROR_EVENT)) {
+		int err = e->type () - RSTARTUP_ERROR_EVENT;
+		QString message = i18n ("There was a problem starting the R backend. The following errors:\n");
+		if (err & REmbed::LibLoadFail) {
+			message.append (i18n ("\t- The 'rkward' R-library could not be loaded. This library is needed for communication between R and RKWard and many things will not work properly if this library is not present. Likely RKWard will even crash. The 'rkward' R-library should have been included in your distribution or RKWard, and should have been set up when you ran 'make install'. Please try 'make install' again and check for any errors. You should quit RKWard now.\n"));
+		}
+		if (err & REmbed::SinkFail) {
+			message.append (i18n ("\t-There was a problem opening the files needed for communication with R. Most likely this is due to an incorrect setting for the location of these files. Check whether you have correctly configured the location of the log-files (Settings->Configure Settings->Logfiles) and restart RKWard.\n"));
+		}
+		if (err & REmbed::OtherFail) {
+			message.append (i18n ("\t-An unspecified error occured that is not yet handled by RKWard. Likely RKWard will not function properly. Please check your setup.\n"));
+		}
+		KMessageBox::error (0, message, i18n ("Error starting R"));
+		r_thread->unlock ();
 	}
 }
