@@ -1,0 +1,7 @@
+Package: rkward
+Title: Provides some helper functions for the RKWard frontend
+Version: 0.2.6
+Author: Thomas Friedrichsmeier
+Description: Most of the functions in here are really only needed for the internal communication between RKWard and R. There are also a few functions, which allow access to RKWard or RKWard specifics. Most is not implemented, yet.
+Maintainer: RKWard-devel mailing list <rkward-devel@lists.sourceforge.net>
+License: GNU GPL version 2 or newer
