@@ -1,0 +1,3 @@
+"rk.get.label" <- function (x) {
+	as.vector (attr (x, ".rk.meta")[row.names (attr (x, ".rk.meta")) == "label",1])
+}
