@@ -48,7 +48,7 @@ public:
 	
 	static QString &rHomeDir () { return r_home_dir; };
 	static QString &pagerApp () { return pager_app; };
-	static QString &startupFile () { return r_startup_file; };
+	//static QString &startupFile () { return r_startup_file; };
 	static bool rNosave () { return r_nosave; };
 	static bool rSlave () { return r_slave; };
 	static QStringList getOptionList ();
@@ -58,14 +58,14 @@ public slots:
 private:
 	QCheckBox *nosave_box;
 	QCheckBox *slave_box;
-	GetFileNameWidget *startup_file_choser;
+	//GetFileNameWidget *startup_file_choser;
 	GetFileNameWidget *pager_choser;
 friend class RInterface;
 	static bool r_nosave;
 	static bool r_slave;
 	static QString r_home_dir;
 	static QString pager_app;
-	static QString r_startup_file;
+	//static QString r_startup_file;
 };
 
 #endif
